fix dark mode impl

--- a/src/index.scss
+++ b/src/index.scss
@@ -60,10 +60,12 @@ elara-app {
   -ms-user-select: text;
 }
 
-.night {
-  --elara-background-color: #373737;
-  --elara-font-color: #f0f0f0;
-  --elara-font-hover: rgb(255, 255, 255, 0.3);
+@media (prefers-color-scheme: dark) {
+  :root {
+    --elara-background-color: #373737;
+    --elara-font-color: #f0f0f0;
+    --elara-font-hover: rgb(255, 255, 255, 0.3);
+  }
 
   ::selection {
     background: #324a4e;
@@ -73,15 +75,16 @@ elara-app {
   }
 }
 
-.day {
-  --elara-background-color: #f2f2f2;
-  --elara-font-color: #2f2f2f;
-  --elara-font-hover: rgb(0, 0, 0, 0.3);
+@media (prefers-color-scheme: light) {
+  :root {
+    --elara-background-color: #f2f2f2;
+    --elara-font-color: #2f2f2f;
+    --elara-font-hover: rgb(0, 0, 0, 0.3);
+  }
 
   ::selection {
     background: #f3f3f3;
   }
-  
   ::-moz-selection {
     background: #f3f3f3;
   }
